1.10:

    * Set mode and claimed_id before redirect to setup in checkid_immediate.
      Without this some implementations (Movable Type) do not have enough
      context to understand what the client is trying to do (Adam Sjøgren)

    * Fix potential timing attack when checking signatures (Adam Sjøgren)
      (see http://lists.openid.net/pipermail/openid-security/2010-July/001156.html)

    * Support HMAC-SHA256 signatures (Adam Sjøgren)

    * _mode_checkid(): Pass 'ns' through setup_map.
      (reported and fixed by Sergey Homenkow.)

    * signed_return_url(): verify and remove 'realm', if provided.
      (reported and fixed by Sergey Homenkow.)

    * "10.2.1. In Response to Immediate Requests" (Negative Assertions)
        OpenID2 return 'mode=setup_needed' and 'ns',
        OpenID1 return 'mode=id_res' and 'user_setup_url'.
        (reported and fixed by Sergey Homenkow.)

	* "8.2.4. Unsuccessful Response Parameters" (Establishing Associations)
        "If the OP does not support a session type or association type, it MUST
        respond with a direct error message indicating that the association
        request failed." (reported and fixed by Sergey Homenkow.)

    * Fix our openid.signed list to be consistent with what we
        actually sign when empty fields are present.
        Reported and fixed by Igor Gariev <gariev@hotmail.com>.

    * Don't include op_endpoint in 1.1 assertion messages.

1.01:

	* OpenID 2.0 support from kazeburo from mixi.jp.

0.13: 2007-09-09

	* remove test's non-used/non-declared "use" of DSA modules.
	  makes test in auto-testers now.  also remove dead/old tests.

0.12: 2007-09-03

	* make ->err method return false when no error:
	  http://rt.cpan.org/Ticket/Display.html?id=29109

	* doc fix: http://rt.cpan.org/Ticket/Display.html?id=29110

        * doc fix in abstract (was previously copy/pasted from the
	consumer module)

0.11: (2007-04-16) - after year+ of being in svn, but not released. :)
