@@ -11,7 +11,7 @@ copyright_year   = 2005
 URI                 = 0
 MIME::Base64        = 0
 Digest::SHA         = 0
-Crypt::DH           = 0
+Crypt::DH::GMP      = 0
 Net::OpenID::Common = 1.10
 
 [Prereqs / TestRequires]
