@@ -1,5 +1,7 @@
 1.10:
 
+    * Use Crypt::DH::GMP over Crypt::DH for speed (Robert Norris)
+
     * Set mode and claimed_id before redirect to setup in checkid_immediate.
       Without this some implementations (Movable Type) do not have enough
       context to understand what the client is trying to do (Adam Sjøgren)
